--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!--META TAG OG-->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="ACL BURGER - O melhor Hamburguer de Jampa" />
+    <meta property="og:image" content="https://project-burger-place-five.vercel.app/assets/hamb-1.png" />
+    <meta property="og:description" content="O melhor Hamburguer Gourmet de Jampa" />
+    <meta property="og:site_name" content="ACL BURGER" />
+
     <link rel="stylesheet" href="./styles/output.css" />
     <title>ACL Burguer - A melhor hamburgueria de Jampa</title>
 </head>
